--- a/sass/style.css
+++ b/sass/style.css
@@ -1083,6 +1083,9 @@ h5 {
     object-fit: cover;
   }
 }
+.strategy_hidden {
+  display: none;
+}
 
 .strategy__content {
   padding: 24px 33px 26px;
